k8s/1-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopfast
  labels:
    name: shopfast
    environment: production
