k8s/9-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: shopfast
spec:
  selector:
    app: shopfast-web
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
